--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Architects+Daughter" rel="stylesheet" type="text/css">
+    <link href="http://jzlingmo.github.io/rc-mention/stylesheets/stylesheet.css" rel="stylesheet" type="text/css">
     <title>rc-mention</title>
 </head>
 <body>
