--- a/index.html
+++ b/index.html
@@ -36,7 +36,11 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <div id="main"></div>
+        <h3>
+          rc mention v1
+          <small><a href="./v2">take a look at v2</a></small>
+        </h3>
+        <div id="main" style="padding: 0;"></div>
       </section>
     </div>
 
