--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
 <!--<script src="//cdn.bootcss.com/rangy/1.3.0/rangy-core.min.js"></script>-->
 <script src="./node_modules/react/dist/react.min.js"></script>
 <script src="./node_modules/react-dom/dist/react-dom.min.js"></script>
-<script src="./dist/bundle.js"></script>
+<script src="./dist/bundleV2.js"></script>
 </body>
 </html>
