--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
   <body>
 
     <!-- HEADER -->
-    <!--<div id="header_wrap" class="outer">-->
-        <!--<header class="inner">-->
-          <!--<a id="forkme_banner" href="https://github.com/jzlingmo/rc-mention">View on GitHub</a>-->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/jzlingmo/rc-mention">View on GitHub</a>
 
-          <!--<h1 id="project_title">rc-mention</h1>-->
+          <h1 id="project_title">rc-mention</h1>
           <!--<h2 id="project_tagline">react mention component</h2>-->
 
             <!--<section id="downloads">-->
               <!--<a class="zip_download_link" href="https://github.com/jzlingmo/rc-mention/zipball/master">Download this project as a .zip file</a>-->
               <!--<a class="tar_download_link" href="https://github.com/jzlingmo/rc-mention/tarball/master">Download this project as a tar.gz file</a>-->
             <!--</section>-->
-        <!--</header>-->
-    <!--</div>-->
+        </header>
+    </div>
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
