--- a/v2/index.html
+++ b/v2/index.html
@@ -17,6 +17,21 @@
   </head>
 
   <body>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+      <header class="inner">
+        <a id="forkme_banner" href="https://github.com/jzlingmo/rc-mention">View on GitHub</a>
+
+        <h1 id="project_title">rc-mention</h1>
+        <!--<h2 id="project_tagline">react mention component</h2>-->
+
+        <!--<section id="downloads">-->
+        <!--<a class="zip_download_link" href="https://github.com/jzlingmo/rc-mention/zipball/master">Download this project as a .zip file</a>-->
+        <!--<a class="tar_download_link" href="https://github.com/jzlingmo/rc-mention/tarball/master">Download this project as a tar.gz file</a>-->
+        <!--</section>-->
+      </header>
+    </div>
+
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
@@ -24,10 +39,9 @@
           <small><a href="../">switch to v1</a></small>
         </h3>
         <ul>
-          <li>without bookmark methods</li>
-          <li>friendly with rangy</li>
+          <li>Without bookmark methods</li>
+          <li>Compatible with <a href="https://github.com/timdown/rangy">rangy</a></li>
         </ul>
-        <p>Mark range everywhere(keyup, click or can add more) to make range available anytime</p>
         <div id="main" style="padding: 0;"></div>
       </section>
     </div>
