--- a/index.html
+++ b/index.html
@@ -56,5 +56,13 @@
     <script src="//cdn.bootcss.com/react/0.14.7/react.min.js"></script>
     <script src="//cdn.bootcss.com/react/0.14.7/react-dom.min.js"></script>
     <script src="./javascripts/bundle.js"></script>
+    <script src="//cdn.bootcss.com/fastclick/1.0.6/fastclick.min.js"></script>
+    <script>
+      if ('addEventListener' in document) {
+        document.addEventListener('DOMContentLoaded', function() {
+          FastClick.attach(document.body);
+        }, false);
+      }
+    </script>
   </body>
 </html>
